--- a/package.json
+++ b/package.json
@@ -35,16 +35,21 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.90.5",
     "@wealthfolio/addon-sdk": "^2.0.0",
     "@wealthfolio/ui": "^2.0.0",
     "lucide-react": "^0.562.0",
     "motion": "^12.0.0",
     "papaparse": "^5.4.1",
-    "react": "^19.1.1"
+    "react": "^19.1.1",
+    "react-hook-form": "^7.57.0",
+    "sonner": "^2.0.4",
+    "zod": "^3.25.60"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@vitejs/plugin-react": "^4.5.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/node": "^20.0.0",
